# sdfibm

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  cpc.files  cpc.includes  createFields.h  main.cpp  remake.sh  solid.h  solidcloud.cpp  solidcloud.h  utils.h
examples/: readme
examples/falling_ellipse/: solidDict
examples/falling_ellipse/0/: As  T  U  p
examples/falling_ellipse/constant/: .transportProperties.un~  transportProperties
examples/falling_ellipse/constant/polyMesh/: .blockMeshDict.un~  blockMeshDict  boundary  faces  neighbour  owner  points
examples/falling_ellipse/system/: .controlDict.un~  .fvSchemes.un~  .fvSolution.un~  controlDict  decomposeParDict  fvSchemes
examples/flow_past_cylinder/: cloud.out
examples/flow_past_cylinder/0/: As  T  U  p  phi
examples/flow_past_cylinder/0.orig/: U
examples/flow_past_cylinder/constant/: transportProperties
examples/flow_past_cylinder/constant/polyMesh/: boundary  neighbour  owner  points
examples/flow_past_cylinder/re200/: solidDict
examples/flow_past_cylinder/re200/0/: As  T  U  p  phi
examples/flow_past_cylinder/re200/constant/polyMesh/: boundary  neighbour  owner  points
examples/flow_past_cylinder/re200/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution
examples/flow_past_cylinder/system/: controlDict  fvSchemes  fvSolution
examples/sedimentation/: solidDict
examples/sedimentation/0/: .C.un~  .T.un~  .U.un~  As  T  U  p
examples/sedimentation/constant/: transportProperties
examples/sedimentation/constant/polyMesh/: .blockMeshDict.un~  blockMeshDict
examples/sedimentation/system/: controlDict  decomposeParDict  fvSchemes  fvSolution  refineMeshDict  topoSetDict
examples/taylor_couette/: .fdm.m.un~  .solidcloud.yaml.un~  fdm.m  solidDict
examples/taylor_couette/0/: .T.un~  .U.un~  .p.un~  As  T  U  p
examples/taylor_couette/constant/: .transportProperties.un~  transportProperties
examples/taylor_couette/constant/polyMesh/: .blockMeshDict.un~  boundary  faces  neighbour  owner  points
examples/taylor_couette/system/: .controlDict.un~  .fvSchemes.un~  .fvSolution.un~  blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution
libcollision/: Makefile  build.sh  ugrid.cpp  ugrid.h
libmaterial/: imaterial.h
libmotion/: Makefile  imotion.h  motion000000.h  motion000001.h  motion000100.h  motion001001.h  motion111111.h  motionfactory.cpp
libshape/: circle.h  circle_tail.h  ellipsoid.h  ishape.h  shapefactory.cpp  shapefactory.h  vof.cpp  vof.h
src/: CMakeLists.txt  Makefile  cellenumerator.cpp  cellenumerator.h  createFields.h  entitylibrary.h  genericfactory.h  geometrictools.cpp  geometrictools.h  logger.cpp  logger.h  main.cpp  meshinfo.cpp  meshinfo.h  remake.sh  solid.cpp  solid.h  solidcloud.cpp  solidcloud.h  types.h  utils.h
src/libcollision/: CMakeLists.txt  Makefile  bbox.h  collision.cpp  collision.h  ugrid.cpp  ugrid.h
src/libforce/: CMakeLists.txt  constant.h  forcefactory.cpp  forcefactory.h  iforce.h  spring.h
src/libforcer/: CMakeLists.txt  constant.h  forcerfactory.cpp  forcerfactory.h  iforcer.h  magnetic.h  spring.h
src/libmaterial/: imaterial.h
src/libmotion/: CMakeLists.txt  Makefile  imotion.h  motion000000.h  motion000001.h  motion000002.h  motion000010.h  motion000100.h  motion000111.h  motion001001.h  motion010010.h  motion01mask.h  motion100100.h  motion110002.h  motion111111.h  motion222000.h  motionfactory.cpp  motionfactory.h  motionopenclose.h  motionrotor.h  motionsinedirectional.h
src/libshape/: CMakeLists.txt  Makefile  box.h  circle.h  circle_tail.h  circle_twotail.h  ellipse.h  ellipsoid.h  ishape.h  kernel.h  plane.h  rectangle.h  shapefactory.cpp  shapefactory.h  sphere.h  template.h
src/libshape/sdf/: sdf.h
tool_vof/: Makefile  main.cpp  smoothvof  solidcloud.cpp  solidcloud.h
tool_vof/example/: alpha.water.orig  readme  run.sh  solidDict
tool_vof/example/0/: U  alpha.water  p_rgh
tool_vof/example/constant/: g  transportProperties
tool_vof/example/constant/polyMesh/: blockMeshDict  boundary  faces  neighbour  owner  points
tool_vof/example/system/: controlDict  fvSolution
